# helix

./: .gitignore  Cargo.toml  README.md  languages.toml  prs.yml  rust-toolchain.toml
.github/workflows/: integrate-prs.yml  sync-master.yml
book/src/: editor.md  keymap.md  themes.md
docs/plans/: 2026-05-12-phase-1-schema-extraction-and-bugfix.md  2026-05-12-phase-2a-control-socket-scaffolding.md  2026-05-12-phase-2b-read-methods.md  2026-05-12-phase-2c-write-methods.md  2026-05-12-phase-3-lsp-methods.md  2026-05-13-phase-4a-mcp-bridge-foundation.md  2026-05-13-phase-4b-mcp-tools.md  2026-05-13-phase-5-hook-subcommand.md  2026-05-13-phase-6-final-methods.md  2026-05-14-phase-6b-deferred-items.md
docs/specs/: 2026-05-12-helix-claude-mcp-bridge-design.md  2026-05-12-helix-mcp-bridge-design.md  2026-05-14-bridge-improvements-and-optimizations.md
helix-claude-mcp/: Cargo.toml  README.md
helix-claude-mcp/src/: discovery.rs  hook.rs  main.rs  resources.rs  rpc_client.rs  serve.rs  tools.rs
helix-claude-mcp/tests/: hook_integration.rs  integration.rs
helix-context-schema/: Cargo.toml
helix-context-schema/src/: lib.rs  protocol.rs  protocol_error.rs  snapshot.rs  source.rs  types.rs
helix-context-schema/tests/: protocol_roundtrip.rs  serde_roundtrip.rs
helix-core/: Cargo.toml
helix-lsp/: Cargo.toml
helix-lsp-types/src/: lib.rs
helix-lsp/src/: client.rs  lib.rs
helix-mcp/: Cargo.toml  README.md
helix-mcp/src/: discovery.rs  doctor.rs  hook.rs  main.rs  rpc_client.rs  serve.rs  tools.rs
helix-mcp/tests/: hook_integration.rs  integration.rs
helix-term/: Cargo.toml
helix-term/src/: application.rs  commands.rs  context_logger.rs  events.rs  handlers.rs  lib.rs  main.rs
helix-vcs/: Cargo.toml
helix-vcs/src/: git.rs  lib.rs
helix-view/: Cargo.toml
helix-view/src/: document.rs  editor.rs  events.rs  handlers.rs  theme.rs  view.rs
master/: ecosystem.html
scripts/: integrate-prs.sh  report-status.sh
(+15 files in other folders)
