[package]
name = "helix-claude-mcp"
description = "MCP bridge that exposes Helix editor state and commands to Claude Code."
include = ["src/**/*", "README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "helix-claude-mcp"
path = "src/main.rs"

[dependencies]
helix-context-schema = { path = "../helix-context-schema" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "time", "fs", "process"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
rmcp = { version = "1.6", features = ["server", "transport-io"] }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
