[package]
name = "helix-context-schema"
description = "JSON snapshot schema shared between Helix and external context-aware tooling."
include = ["src/**/*"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
